# libpff-20120802

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.mingw  README.static  aclocal.m4  configure  configure.ac  libpff.pc.in  libpff.spec  libpff.spec.in
common/: Makefile.in  common.h.bak  config.h  config.h.in  memory.h.bak  types.h
contrib/: Makefile.am  Makefile.in
contrib/win64/libbfio/: libbfio.vcproj
contrib/win64/libcstring/: libcstring.vcproj
contrib/win64/liberror/: liberror.vcproj
contrib/win64/libfdata/: libfdata.vcproj
contrib/win64/libfdatetime/: libfdatetime.vcproj
contrib/win64/libfguid/: libfguid.vcproj
contrib/win64/libfmapi/: libfmapi.vcproj
contrib/win64/libfwnt/: libfwnt.vcproj
dpkg/: changelog  changelog.in  control  copyright  copyright.in  rules
examples/: Makefile.am  Makefile.in
examples/jpff/: Load.java  OpenClose.java
examples/libpff/: open_close.c
examples/pypff/: folders.py  messages.py  open_close.py
include/: Makefile.in  libpff.h
jpff/: Makefile.am  Makefile.in  jpff_File.c  jpff_jni.h  jpff_string.c  jpff_string.h
libbfio/: Makefile.am  Makefile.in  libbfio_definitions.h
libcerror/: Makefile.am  Makefile.in  libcerror_definitions.h
libcfile/: Makefile.am  Makefile.in  libcfile_definitions.h
libclocale/: Makefile.am  Makefile.in
libcnotify/: Makefile.am  Makefile.in  libcnotify_definitions.h
libcpath/: Makefile.in
libcsplit/: Makefile.am  Makefile.in  libcsplit_definitions.h
libcstring/: Makefile.am  Makefile.in  libcstring_definitions.h  libcstring_support.c.bak
libcsystem/: Makefile.am  Makefile.in  libcsystem_date_time.c  libcsystem_date_time.h  libcsystem_definitions.h  libcsystem_file_io.h  libcsystem_file_stream.h  libcsystem_find.h  libcsystem_getopt.c  libcsystem_getopt.h  libcsystem_glob.c  libcsystem_glob.c.bak  libcsystem_glob.h  libcsystem_i18n.h  libcsystem_libcerror.h  libcsystem_libclocale.h  libcsystem_libcnotify.h  libcsystem_libcstring.h  libcsystem_libuna.h  libcsystem_signal.c  libcsystem_signal.h  libcsystem_string.c  libcsystem_string.h  libcsystem_support.c  libcsystem_support.h  libcsystem_unused.h
libfcache/: Makefile.am  Makefile.in  libfcache_array_type.c  libfcache_array_type.h  libfcache_cache.c  libfcache_cache.h  libfcache_cache_value.c  libfcache_cache_value.h  libfcache_definitions.h  libfcache_types.h
libfdata/: Makefile.am  Makefile.in  libfdata_array_type.c  libfdata_array_type.h  libfdata_block.c  libfdata_block.h  libfdata_block_reference.c  libfdata_buffer_reference.c  libfdata_buffer_reference.h  libfdata_definitions.h  libfdata_libbfio.h  libfdata_list.c  libfdata_list.h  libfdata_list_element.c  libfdata_list_element.h  libfdata_range.c  libfdata_range.h  libfdata_reference.c  libfdata_reference.h  libfdata_tree.c  libfdata_tree.h  libfdata_tree_node.c  libfdata_tree_node.c.bak  libfdata_tree_node.h  libfdata_types.h  libfdata_vector.c  libfdata_vector.h
libfdatetime/: Makefile.am  Makefile.in  libfdatetime_definitions.h  libfdatetime_nsf_timedate.h
libfguid/: Makefile.am  Makefile.in  libfguid_definitions.h
libfmapi/: Makefile.am  Makefile.in  libfmapi_class_identifier.c  libfmapi_class_identifier.h  libfmapi_codepage.c  libfmapi_codepage.h  libfmapi_crc.c  libfmapi_crc.h  libfmapi_debug.c  libfmapi_debug.h  libfmapi_definitions.h  libfmapi_entry_identifier.c  libfmapi_entry_identifier.h  libfmapi_extern.h  libfmapi_guid.c  libfmapi_guid.h  libfmapi_libcerror.h  libfmapi_libcnotify.h  libfmapi_libcstring.h  libfmapi_libfdatetime.h  libfmapi_libfguid.h  libfmapi_libfwnt.h  libfmapi_libuna.h  libfmapi_lzfu.c  (+11 more)
msvscpp/: Makefile.am  Makefile.in  UpgradeLog.XML  libpff.VC.VC.opendb  libpff.sln
msvscpp/libbfio/: libbfio.vcproj  libbfio.vcxproj
msvscpp/libcerror/: libcerror.vcproj  libcerror.vcxproj
msvscpp/libcfile/: libcfile.vcproj  libcfile.vcxproj
msvscpp/libclocale/: libclocale.vcproj  libclocale.vcxproj
msvscpp/libcnotify/: libcnotify.vcproj  libcnotify.vcxproj
msvscpp/libcpath/: libcpath.vcproj  libcpath.vcxproj
msvscpp/libcsplit/: libcsplit.vcproj  libcsplit.vcxproj
msvscpp/libcstring/: libcstring.vcproj  libcstring.vcxproj
msvscpp/libcsystem/: libcsystem.vcproj  libcsystem.vcxproj
msvscpp/libfcache/: libfcache.vcproj  libfcache.vcxproj
msvscpp/libfdata/: libfdata.vcproj  libfdata.vcxproj
msvscpp/libfdatetime/: libfdatetime.vcproj  libfdatetime.vcxproj
msvscpp/libfguid/: libfguid.vcproj  libfguid.vcxproj
msvscpp/libfmapi/: libfmapi.vcproj  libfmapi.vcxproj
msvscpp/libfvalue/: libfvalue.vcproj  libfvalue.vcxproj
msvscpp/libfwnt/: libfwnt.vcproj  libfwnt.vcxproj
msvscpp/libpff_dll/: libpff_dll.vcproj  libpff_dll.vcxproj
msvscpp/libuna/: libuna.vcxproj
msvscpp/pffexport/: pffexport.vcproj  pffexport.vcxproj
msvscpp/pffinfo/: pffinfo.vcproj  pffinfo.vcxproj
pfftools/: Makefile.am  Makefile.in  export_handle.c  export_handle.h  info_handle.c  info_handle.h  item_file.c  item_file.h  log_handle.c  log_handle.h  pffexport.c  pffexport.c.bak  pffinfo.c  pffinput.c  pffinput.h  pffoutput.c  pffoutput.h  pfftools_libcerror.h  pfftools_libcfile.h  pfftools_libclocale.h  pfftools_libcnotify.h  pfftools_libcpath.h  pfftools_libcsplit.h  pfftools_libcstring.h  pfftools_libcsystem.h  pfftools_libfdatetime.h  pfftools_libfguid.h  pfftools_libfvalue.h  pfftools_libpff.h
pypff/: Makefile.am  Makefile.in  pypff.c  pypff.h  pypff_codepage.c  pypff_codepage.h  pypff_datetime.c  pypff_datetime.h  pypff_file.c  pypff_file.h  pypff_file_object_io_handle.c  pypff_file_object_io_handle.h  pypff_folder.c  pypff_folder.h  pypff_item.c  pypff_item.h  pypff_libbfio.h  pypff_libcerror.h  pypff_libclocale.h  pypff_libcstring.h  pypff_libpff.h  pypff_message.c  pypff_message.h  pypff_python.h
tests/: Makefile.am  Makefile.in  pff1.c
(+166 files in other folders)
