WIN64_MSVSCPP_FILES = \
	win64/libbfio/libbfio.vcproj \
	win64/libcstring/libcstring.vcproj \
	win64/liberror/liberror.vcproj \
	win64/libfdata/libfdata.vcproj \
	win64/libfdatetime/libfdatetime.vcproj \
	win64/libfguid/libfguid.vcproj \
	win64/libfmapi/libfmapi.vcproj \
	win64/libfwnt/libfwnt.vcproj
	win64/libnotify/libnotify.vcproj \
	win64/libpff_dll/libpff_dll.vcproj \
	win64/libsystem/libsystem.vcproj \
	win64/libuna/libuna.vcproj \
	win64/pffexport/pffexport.vcproj \
	win64/pffinfo/pffinfo.vcproj \
	win64/libpff.sln

EXTRA_DIST = \
	$(WIN64_MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

