JPFF_EXAMPLES = \
	jpff/Load.java \
	jpff/OpenClose.java

LIBPFF_EXAMPLES = \
	libpff/open_close.c

PYPFF_EXAMPLES = \
	pypff/folders.py \
	pypff/messages.py \
	pypff/open_close.py

EXTRA_DIST = \
	$(JPFF_EXAMPLES) \
	$(LIBPFF_EXAMPLES) \
	$(PYPFF_EXAMPLES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

